src/objects/CD_Fulfillment_Type__c.object
<CustomObject>
    <fields>
        <fullName>CFC__c</fullName>
        <label>CFC</label>
        <picklist>
            <picklistValues>
                <fullName>FLEXTRONICS MANUFACTURING TIANJIN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FLEXTRONICS FtW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foxconn Guan Lan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKD - TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKD TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEXTRONICS BRASIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Strategy__c</fullName>
        <label>Distribution Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>DIRECT SHIP CHINA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD SHIP FLEXTRONICS FtW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Ship to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKD - TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKD TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crossdock Flex FtW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crossdock at Flextronics FtW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD SHIP BRAZIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Customer_Shipment_site__c</fullName>
        <label>Final Customer Shipment site</label>
        <picklist>
            <picklistValues>
                <fullName>FLEXTRONICS MANUFACTURING TIANJIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEXTRONICS FtW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foxconn Guan Lan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKD - TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKD TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEXTRONICS BRASIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_ID__c</fullName>
        <displayFormat>FUL-{00000000}</displayFormat>
        <label>Fulfillment ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Key_Account_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Account_Code</label>
        <referenceTo>Key_Account__c</referenceTo>
        <relationshipLabel>CD Fulfillment Type</relationshipLabel>
        <relationshipName>CD_Fulfillment_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Account_Description__c</fullName>
        <formula>Key_Account_Code__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Account Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFG_SITE__c</fullName>
        <label>MFG SITE</label>
        <picklist>
            <picklistValues>
                <fullName>Endo - FLEXTRONICS FtW</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ENDO - FLEXTRONICS MANUFACTURING TIANJIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEXTRONICS BRASIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEXTRONICS MANUFACTURING TIANJIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foxconn Guan Lan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ORG_CODE__c</fullName>
        <inlineHelpText>XTJ - Flex TJ
XFW - Flex FW
XPT - Flex BZ
X41 - Foxconn</inlineHelpText>
        <label>ORG CODE</label>
        <picklist>
            <picklistValues>
                <fullName>XTJ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>XFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X41</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Model__c</fullName>
        <label>Sales Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CD Fulfillment Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Model__c</columns>
        <columns>Key_Account_Code__c</columns>
        <columns>Key_Account_Description__c</columns>
        <columns>MFG_SITE__c</columns>
        <columns>CFC__c</columns>
        <columns>Final_Customer_Shipment_site__c</columns>
        <columns>Distribution_Strategy__c</columns>
        <columns>ORG_CODE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FUL-{000000}</displayFormat>
        <label>CD Fulfillment Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CD Fulfillment Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>